crates/pgls_pretty_print/tests/snapshots/single/tests__json_scalar_expr_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/json_scalar_expr_0.sql
snapshot_kind: text
---
select json_scalar(123);
