crates/pgls_pretty_print/tests/snapshots/single/tests__leading_boolean_operators_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/leading_boolean_operators.sql
---
select
	staging.buildings.id
from
	staging.buildings
where
	staging.buildings.construction_year >
	1950
	and staging.buildings.address_fk is not null
	and staging.buildings.identification_number is not null;
