crates/pgls_pretty_print/tests/snapshots/single/tests__listen_stmt_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/listen_stmt_0_100.sql
snapshot_kind: text
---
LISTEN mytable_updated;
